external-crates/move/crates/move-compiler/tests/move_check/translated_ir_tests/move/commands/abort_negative_stack_size.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/translated_ir_tests/move/commands/abort_negative_stack_size.move:6:1
  │
6 │ }
  │ ^
  │ │
  │ Unexpected '}'
  │ Expected an expression term

error[E01002]: unexpected token
  ┌─ tests/move_check/translated_ir_tests/move/commands/abort_negative_stack_size.move:7:1
  │
7 │ }
  │ ^ Invalid code unit. Expected 'address' or 'module'. Got '}'

