external-crates/move/crates/move-compiler/tests/move_check/translated_ir_tests/move/commands/abort_negative_stack_size.move
// check: NEGATIVE_STACK_SIZE_WITHIN_BLOCK
module 0x42::m {

fun main() {
    abort
}
}
